--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 </head>
 <body>
     <div class="login-container">
-        <img src="discord-logo-small.png" alt="Discord Logo">
+        <img src="image.png" alt="Discord logo">
         <h1>Bienvenue de retour !</h1>
         <p>Nous sommes tellement heureux de vous revoir !</p>
         <form id="login-form">
